apps/networking/traefik-kustomize/base/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
spec:
  template:
    spec:
      containers:
        - name: traefik
          ports:
            - name: web-int
              containerPort: 8080
              protocol: TCP
            - name: web-int-tls
              containerPort: 8043
              protocol: TCP
