apps/networking/traefik-kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-internal
  namespace: traefik
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  annotations:
    metallb.universe.tf/address-pool: first-pool
spec:
  selector:
    app.kubernetes.io/instance: traefik-traefik
    app.kubernetes.io/name: traefik
  type: LoadBalancer
  ports:
    - port: 80
      name: web-int
      targetPort: web-int
    - port: 443
      name: web-int-tls
      targetPort: web-int-tls
