apps/networking/traefik-kustomize/base/ingressroutes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`whoami.andrewpjackson.com`) && PathPrefix(`/notls`)
    kind: Rule
    services:
    - name: whoami
      port: 80

# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: ingressroutetls
#   namespace: traefik
# spec:
#   entryPoints:
#     - websecure
#   routes:
#   - match: Host(`whoami.andrewpjackson.com`)
#     kind: Rule
#     services:
#     - name: whoami
#       port: 80
#   tls:
#     certResolver: myresolver
